--- a/about-us.html
+++ b/about-us.html
@@ -403,27 +403,15 @@
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
-					<h1 class="header__content-title">Коротко про Armax MG</h1>
+					<h1 class="header__content-title">Коротко про нас</h1>
 					<p class="header__content-text">
-						ArmaxMG засновано в 2019 році! ArmaxMG – це сучасне та
-						технологічно-оснащене українське металургійне підриємство, яке
-						виробляє різну продукцію з металу. Вся продукція на нашому
-						підприємстві в Ківерцях проходить повний цикл виробництва від
-						креслення до упаковки!
+						Armax MG – сучасне та технологічно-оснащене українське виробництво, спеціалізуємось на металообробці з 2018
+						року. Надаємо повний комплекс послуг з обробки металу: лазерного різання, згинання, зварювання металевих
+						виробів та фарбування.
 					</p>
 				</div>
-				<div class="header__form-container header__inner">
-					<h3 class="header__form-title">Надіслати запит :</h3>
-
-					<form class="header__form" action="">
-						<input class="input-name" type="text" placeholder="Ім'я" />
-						<input class="input-number" type="tel" placeholder="Телефон" />
-						<button class="button header__content-button" type="submit">
-							Надіслати
-						</button>
-					</form>
-				</div>
 			</div>
+		</div>
 		</div>
 	</header>
 
@@ -677,16 +665,20 @@
 						</ul>
 					</div>
 					<div class="calculation__form-container">
-						<form class="calculation__form" method="post">
-							<input type="text" placeholder="Ім'я" />
-							<input type="tel" placeholder="Телефон" />
-							<input type="email" placeholder="Електронна пошта" />
+						<form class="calculation__form" action="send_mail.php" name="form" method="POST">
+							<input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
+								data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
+							<input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
+								data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+
+
+							<input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
+								data-reg="^((\+380|380|0)+([0-9]){9})$" />
 							<textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
 							<label class="calculation__label" for="file">Завантажити файл:</label>
 							<input class="calculation__input-file" type="file" id="file" />
 
-							<button class="header__content-button button__disabled" type="submit" disabled>
-								Надіслати
+							<input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
 							</button>
 						</form>
 					</div>
@@ -802,6 +794,7 @@
 	<script src="js/index.js"></script>
 	<script src="js/swiper.js"></script>
 	<script src="js/fslightbox.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
