--- a/index.html
+++ b/index.html
@@ -188,24 +188,24 @@
             будь-якої складності. Європейська якість
           </p>
         </div>
-        <div class="header__form-container header__inner">
-          <h3 class="header__form-title">Надіслати запит :</h3>
+        <!-- <div class="header__form-container header__inner">
+        <h3 class="header__form-title">Надіслати запит :</h3>
 
-          <form class="header__form" action="send_mail.php" name="form" method="POST">
-            <input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
-              data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
-            <input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
-              data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
-
-
-            <input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
-              data-reg="^((\+380|380|0)+([0-9]){9})$" />
+        <form class="header__form" action="send_mail.php" name="form" method="POST">
+          <input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
+            data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
+          <input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
+            data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
 
 
-            <input class="button button-form" type="submit" id="btn_send" value="Отправить" />
+          <input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
+            data-reg="^((\+380|380|0)+([0-9]){9})$" />
 
-          </form>
-        </div>
+
+          <input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
+
+        </form>
+      </div> -->
       </div>
     </div>
   </header>
@@ -576,16 +576,21 @@
             </ul>
           </div>
           <div class="calculation__form-container">
-            <form class="calculation__form" method="post">
-              <input type="text" placeholder="Ім'я" />
-              <input type="tel" placeholder="Телефон" />
-              <input type="email" placeholder="Електронна пошта" />
+
+            <form class="calculation__form" action="send_mail.php" name="form" method="POST">
+              <input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
+                data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
+              <input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
+                data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+
+
+              <input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
+                data-reg="^((\+380|380|0)+([0-9]){9})$" />
               <textarea class="form-textarea" cols="40" rows="6" placeholder="Коментар до замовлення"></textarea>
               <label class="calculation__label" for="file">Завантажити файл:</label>
               <input class="calculation__input-file" type="file" id="file" />
 
-              <button class="header__content-button button" type="submit">
-                Надіслати
+              <input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
               </button>
             </form>
           </div>
